<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".view.ActivityMyCommand"
    android:background="@drawable/background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_command"
        style="@style/textView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_products"
        style="@style/button"
        android:background="@color/colorButton"
        android:textColor="#FFFFFF"
        android:id="@+id/btnManageProducts"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_btn"
        style="@style/button"
        android:background="@color/colorButton"
        android:textColor="#FFFFFF"
        android:id="@+id/btnAddProducts"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_list_btn"
        style="@style/button"
        android:background="@color/colorButton"
        android:textColor="#FFFFFF"
        android:id="@+id/btnClearList"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            style="@style/textView"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPriceUnit"
            style="@style/textView"
            android:text="@string/price_unit"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotal"
            style="@style/textView"
            android:text="0,00"
            />
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/lvCommandItems"
        />


</LinearLayout>