<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".view.ActivityMyCommand"
    android:background="@drawable/background"
    android:weightSum="35">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            style="@style/textView"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/product"
            android:id="@+id/editProductName"
            style="@style/textField"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/textView"/>

        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotal"
            style="@style/textView"
            android:text="@string/price_unit"
            />

        <EditText
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:id="@+id/editPrice"
            android:inputType="numberDecimal"
            style="@style/textField"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lvProducts"
        android:layout_weight="32"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:weightSum="3"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@color/colorAccent"
            android:textColor="@color/colorButton"
            android:layout_marginRight="15dp"
            android:id="@+id/btnCancel"
            style="@style/button"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorButton"
            android:textColor="#FFFFFF"
            android:id="@+id/btnSaveProduct"
            style="@style/button"
            />

    </LinearLayout>

</LinearLayout>